# slides_llm_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
slides_llm/: firebase_utils.py  main.py
