[tool.poetry]
name = "slides-llm-backend"
version = "0.1.0"
description = "'"
authors = ["ShinnosukeUesaka <shinnosuke.uesaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.3.0"
fastapi = "^0.109.0"
openai = "^1.8.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
